[project]
name = "raspberry-pi"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "streamdeck>=0.9.4",
    "pillow>=10.1.0",
    "pathlib>=1.0.1",
    "evdev>=1.6.1",
]
# CLANG is required for the evdev dependency

readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1.3",
    "black>=23.10.1",
    "pyright>=1.1.333",
]

[tool.hatch.metadata]
allow-direct-references = true
